<resources>
    <string name="app_name">summary</string>
    <string name="splash1">ملخص لكل المقررات والمواد العلمية</string>
    <string name="splash2">"يمكنك شراء ملخص للكتب بجوده عاليه وتحصيل اعلى استفاده ممكنه بسعر لا يزيد عن 20 جنيه "</string>
    <string name="start">start</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot">"forgot your "</string>
    <string name="pass">Password?</string>
    <string name="login">Log in</string>
    <string name="or">OR</string>
    <string name="social_login_hint">log in with your social media account</string>
    <string name="no_account">Don’t have an account ?</string>
    <string name="signup">Sign up</string>
</resources>